<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.buzzapp.LoginActivity" 
    android:background="#000">

    <Button
        android:id="@+id/login1Lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signupLin"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/p_wordLin"
        android:layout_marginBottom="15dp"
        android:background="#e50000"
        android:onClick="Logged In"
        android:text="@string/Log_inbtn"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/p_wordLin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login1Lin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="82dp"
        android:ems="10"
        android:background="#d3d3d3"
        android:textColor="#fff"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textColorHint="#fff"
        android:hint="@string/pwrd_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/persnameLin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/p_wordLin"
        android:layout_alignLeft="@+id/p_wordLin"
        android:layout_alignRight="@+id/p_wordLin"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:background="#d3d3d3"
        android:textColor="#fff"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textColorHint="#fff"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/forgotpss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:textColor="#fff"
        android:text="@string/forgot_passwd"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/persnameLin"
        android:layout_alignLeft="@+id/persnameLin"
        android:layout_alignRight="@+id/persnameLin"
        android:layout_marginBottom="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="buzzLogo"
        android:scaleType="centerCrop"
        android:src="@drawable/kenya_buzz" />

    <Button
        android:id="@+id/signupLin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forgotpss"
        android:layout_alignLeft="@+id/login1Lin"
        android:layout_alignRight="@+id/login1Lin"
        android:layout_marginBottom="20dp"
        android:background="#e50000"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF" />

</RelativeLayout>
