<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/email_insert"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:background="#fff"
                android:ems="10"
                android:hint="@string/email_hint"
                android:padding="5dp"
                android:textColorHint="#000" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp" >

            <Button
                android:id="@+id/send_email"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="#e50000"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/email_rqSubmit"
                android:textColor="#fff"
                android:width="150dp" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="#e50000"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/cancel_sign_up"
                android:textColor="#fff"
                android:width="150dp" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:text="@string/email_request"
        android:textColor="#fff" />

</RelativeLayout>